@@ -2,6 +2,9 @@
 
 	* parse.pl.in (xst_parse_interfaces_option_str/kw): this code
 	  was passing invalid xst_report keys. How did this get here?
+
+	* time-conf.in: redhat-7.0, mdk-7.2 & debian-2.2 parse/replace
+	  tables.
 	
 2001-04-20  Arturo Espinosa  <arturo@ximian.com>
 
